--- a/test.ipynb
+++ b/test.ipynb
@@ -21457,7 +21457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21480,7 +21480,7 @@
     "# strategy_file_path = Path(r\"C:/\\Users/\\vchar/\\Downloads/\\ge_results (5).csv\")\n",
     "# strategy_file_path = Path(r\"C:/\\Users/\\vchar/\\Downloads/\\ge_results (6).csv\")\n",
     "# strategy_file_path = Path(r\"C:/\\Users/\\vchar/\\Downloads/\\11-08-cp60-es25-mp5-max_fitness_numba_cache_btc_v2024_11_01_15min.csv\")\n",
-    "strategy_file_path = Path(r\"C:/\\Users/\\vchar/\\Downloads/\\ge_results_60min_fold2_cp80_mp10_pop5000_gen100_es50.csv\")\n",
+    "strategy_file_path = Path(r\"C:/\\Users/\\vchar/\\Downloads/\\ge_results.csv\")\n",
     "\n",
     "stats_path = 'testing_results'\n",
     "file_name = 'fold1_baseline'\n",
@@ -21501,19 +21501,19 @@
     "n_total_folds = 9\n",
     "\n",
     "# prob_threshold = 0.8\n",
-    "n_fold = 2"
+    "n_fold = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1106it [01:53,  9.75it/s]\n"
+      "28268it [7:40:38,  1.02it/s]\n"
      ]
     }
    ],
@@ -21523,7 +21523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21536,157 +21536,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "5it [00:07,  1.41s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fold = 9\n",
-      "index -1 is out of bounds for axis 0 with size 0\n",
-      "import os\n",
-      "CUR_DIR = os.getcwd()\n",
-      "# os.chdir('src')\n",
-      "#import pandas as pd\n",
-      "import numpy as np\n",
-      "import gc\n",
-      "from fitness.indicators import numba_indicators, signals\n",
-      "from fitness.performance.helper_func import merge_buy_sell_pnl, get_drawdowns, get_pnl, get_lag\n",
-      "from fitness.performance.helper_func import trading_signals_buy, trading_signals_sell, change_exit\n",
-      "# os.chdir(CUR_DIR)\n",
-      "#from numba import njit\n",
-      "COMMISSION = 0.015\n",
-      "SLIPPAGE = 5e-05\n",
-      "AVAILABLE_CAPITAL = 700000\n",
-      "TRADE_SIZE = 0.5\n",
-      "MAX_LAG = 99\n",
-      "buy_idxs, buy_exit_idxs = trading_signals_buy(buy_signal=((signals.moving_std(arr=price_data['btc_close'], window=30)[MAX_LAG:] > np.quantile(signals.moving_std(arr=price_data['btc_close'], window=30)[MAX_LAG:], 0.75)) & (price_data['hour'][MAX_LAG:] >= 22) & (price_data['hour'][MAX_LAG:] <= 23)), exit_signal=(price_data['day_of_week'][MAX_LAG:] == 4))\n",
-      "sell_idxs, sell_exit_idxs = trading_signals_sell(sell_signal=((signals.moving_std(arr=price_data['btc_close'], window=30)[MAX_LAG:] > np.quantile(signals.moving_std(arr=price_data['btc_close'], window=30)[MAX_LAG:], 0.75)) & (price_data['hour'][MAX_LAG:] >= 21) & (price_data['hour'][MAX_LAG:] <= 23)), exit_signal=(price_data['day_of_week'][MAX_LAG:] == 4))\n",
-      "# if (len(buy_idxs) == 0 or len(buy_exit_idxs) == 0) and (len(sell_idxs) == 0 or len(sell_exit_idxs) == 0):\n",
-      "#     fitness = -9999999\n",
-      "#     avg_drawdown = -9999999\n",
-      "# else:\n",
-      "try:\n",
-      "    buy_idxs, buy_exit_idxs, sell_idxs, sell_exit_idxs = change_exit(buy_idxs, buy_exit_idxs, sell_idxs, sell_exit_idxs)\n",
-      "except:\n",
-      "    pass\n",
-      "if (len(buy_idxs) == 0 or len(buy_exit_idxs) == 0) and (len(sell_idxs) == 0 or len(sell_exit_idxs) == 0):\n",
-      "    fitness = np.nan\n",
-      "    avg_drawdown = np.nan\n",
-      "else:\n",
-      "    buy_idxs = np.array(buy_idxs)\n",
-      "    sell_idxs = np.array(sell_idxs)\n",
-      "    open_prices = price_data['btc_open']\n",
-      "    # pnl_mren_arr, max_dd_mren_arr = get_monkey_test_results(open_prices, buy_idxs, sell_idxs, COMMISSION, SLIPPAGE, AVAILABLE_CAPITAL, TRADE_SIZE)\n",
-      "    buy_prices = open_prices[np.isin(np.arange(len(open_prices)), buy_idxs)]\n",
-      "    buy_exit_prices = open_prices[np.isin(np.arange(len(open_prices)), buy_exit_idxs)]\n",
-      "    sell_prices = open_prices[np.isin(np.arange(len(open_prices)), sell_idxs)]\n",
-      "    sell_exit_prices = open_prices[np.isin(np.arange(len(open_prices)), sell_exit_idxs)]\n",
-      "    buy_arr = get_pnl(buy_exit_prices, buy_prices, COMMISSION, SLIPPAGE, AVAILABLE_CAPITAL, TRADE_SIZE, 1)\n",
-      "    buy_pnl = np.sum(buy_arr)\n",
-      "    sell_arr = get_pnl(sell_exit_prices, sell_prices, COMMISSION, SLIPPAGE, AVAILABLE_CAPITAL, TRADE_SIZE, 0)\n",
-      "    sell_pnl = np.sum(sell_arr)\n",
-      "    all_arr = merge_buy_sell_pnl(buy_idxs, sell_idxs, buy_arr, sell_arr)\n",
-      "    total_pnl = buy_pnl + sell_pnl\n",
-      "    equity_curve_arr = np.cumsum(all_arr)\n",
-      "    drawdowns = get_drawdowns(equity_curve_arr)\n",
-      "    if len(drawdowns[drawdowns!=0]) != 0:\n",
-      "        avg_drawdown = np.sum(drawdowns[drawdowns!=0]) / len(drawdowns[drawdowns!=0])\n",
-      "        fitness = total_pnl / avg_drawdown\n",
-      "    else:\n",
-      "        fitness = np.nan\n",
-      "        avg_drawdown = np.nan\n",
-      "gc.collect()\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "8it [00:11,  1.43s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fold = 9\n",
-      "index -1 is out of bounds for axis 0 with size 0\n",
-      "import os\n",
-      "CUR_DIR = os.getcwd()\n",
-      "# os.chdir('src')\n",
-      "#import pandas as pd\n",
-      "import numpy as np\n",
-      "import gc\n",
-      "from fitness.indicators import numba_indicators, signals\n",
-      "from fitness.performance.helper_func import merge_buy_sell_pnl, get_drawdowns, get_pnl, get_lag\n",
-      "from fitness.performance.helper_func import trading_signals_buy, trading_signals_sell, change_exit\n",
-      "# os.chdir(CUR_DIR)\n",
-      "#from numba import njit\n",
-      "COMMISSION = 0.015\n",
-      "SLIPPAGE = 5e-05\n",
-      "AVAILABLE_CAPITAL = 700000\n",
-      "TRADE_SIZE = 0.5\n",
-      "MAX_LAG = 99\n",
-      "buy_idxs, buy_exit_idxs = trading_signals_buy(buy_signal=((signals.moving_std(arr=price_data['btc_close'], window=30)[MAX_LAG:] > np.quantile(signals.moving_std(arr=price_data['btc_close'], window=30)[MAX_LAG:], 0.75)) & (price_data['hour'][MAX_LAG:] >= 22) & (price_data['hour'][MAX_LAG:] <= 23)), exit_signal=(price_data['day_of_week'][MAX_LAG:] != 1))\n",
-      "sell_idxs, sell_exit_idxs = trading_signals_sell(sell_signal=((price_data['hour'][MAX_LAG:] >= 22) & (price_data['hour'][MAX_LAG:] <= 23)), exit_signal=(price_data['day_of_week'][MAX_LAG:] != 1))\n",
-      "# if (len(buy_idxs) == 0 or len(buy_exit_idxs) == 0) and (len(sell_idxs) == 0 or len(sell_exit_idxs) == 0):\n",
-      "#     fitness = -9999999\n",
-      "#     avg_drawdown = -9999999\n",
-      "# else:\n",
-      "try:\n",
-      "    buy_idxs, buy_exit_idxs, sell_idxs, sell_exit_idxs = change_exit(buy_idxs, buy_exit_idxs, sell_idxs, sell_exit_idxs)\n",
-      "except:\n",
-      "    pass\n",
-      "if (len(buy_idxs) == 0 or len(buy_exit_idxs) == 0) and (len(sell_idxs) == 0 or len(sell_exit_idxs) == 0):\n",
-      "    fitness = np.nan\n",
-      "    avg_drawdown = np.nan\n",
-      "else:\n",
-      "    buy_idxs = np.array(buy_idxs)\n",
-      "    sell_idxs = np.array(sell_idxs)\n",
-      "    open_prices = price_data['btc_open']\n",
-      "    # pnl_mren_arr, max_dd_mren_arr = get_monkey_test_results(open_prices, buy_idxs, sell_idxs, COMMISSION, SLIPPAGE, AVAILABLE_CAPITAL, TRADE_SIZE)\n",
-      "    buy_prices = open_prices[np.isin(np.arange(len(open_prices)), buy_idxs)]\n",
-      "    buy_exit_prices = open_prices[np.isin(np.arange(len(open_prices)), buy_exit_idxs)]\n",
-      "    sell_prices = open_prices[np.isin(np.arange(len(open_prices)), sell_idxs)]\n",
-      "    sell_exit_prices = open_prices[np.isin(np.arange(len(open_prices)), sell_exit_idxs)]\n",
-      "    buy_arr = get_pnl(buy_exit_prices, buy_prices, COMMISSION, SLIPPAGE, AVAILABLE_CAPITAL, TRADE_SIZE, 1)\n",
-      "    buy_pnl = np.sum(buy_arr)\n",
-      "    sell_arr = get_pnl(sell_exit_prices, sell_prices, COMMISSION, SLIPPAGE, AVAILABLE_CAPITAL, TRADE_SIZE, 0)\n",
-      "    sell_pnl = np.sum(sell_arr)\n",
-      "    all_arr = merge_buy_sell_pnl(buy_idxs, sell_idxs, buy_arr, sell_arr)\n",
-      "    total_pnl = buy_pnl + sell_pnl\n",
-      "    equity_curve_arr = np.cumsum(all_arr)\n",
-      "    drawdowns = get_drawdowns(equity_curve_arr)\n",
-      "    if len(drawdowns[drawdowns!=0]) != 0:\n",
-      "        avg_drawdown = np.sum(drawdowns[drawdowns!=0]) / len(drawdowns[drawdowns!=0])\n",
-      "        fitness = total_pnl / avg_drawdown\n",
-      "    else:\n",
-      "        fitness = np.nan\n",
-      "        avg_drawdown = np.nan\n",
-      "gc.collect()\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "3it [00:05,  1.67s/it]\n"
      ]
     }
    ],
@@ -35587,7 +35444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35601,13 +35458,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_data():\n",
     "\n",
-    "    df = pd.read_csv(Path(r'C:/\\Users/\\vchar/\\OneDrive/\\Desktop/\\ML Projects/\\Upwork/\\AlgoT_ML_Dev/\\GitHubFiles/\\V-genetic-algorithms---machine-learning/\\PonyGE2/\\datasets/\\data_folds_60min/\\data_fold1.csv'))\n",
+    "    df = pd.read_csv(Path(r'C:/\\Users/\\vchar/\\OneDrive/\\Desktop/\\ML Projects/\\Upwork/\\AlgoT_ML_Dev/\\GrammarEvolution/\\PonyGE2/\\data_folds_60min/\\data_fold9.csv'))\n",
     "    df['datetime'] = pd.to_datetime(df['datetime'])\n",
     "    df.sort_values('datetime', ascending=True, inplace=True)\n",
     "    df.reset_index(inplace=True, drop=True)\n",
@@ -35629,7 +35486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35638,7 +35495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35653,12 +35510,13 @@
     "  SLIPPAGE = 0.00005\n",
     "  AVAILABLE_CAPITAL = 700000\n",
     "  TRADE_SIZE = 0.5\n",
+    "  MAX_LAG = 99\n",
     "  try:\n",
-    "    buy_idxs, buy_exit_idxs = trading_signals_buy(buy_signal=(price_data['es_high'] >= numba_indicators_nan.change_skewness(prices=price_data['amzn_close'], window=2)), exit_signal=((price_data['tsla_close'] - 2.859) > 4537))\n",
+    "    buy_idxs, buy_exit_idxs = trading_signals_buy(buy_signal=((signals.moving_std(arr=price_data['btc_close'], window=30)[MAX_LAG:] > np.quantile(signals.moving_std(arr=price_data['btc_close'], window=30)[MAX_LAG:], 0.75)) & (price_data['hour'][MAX_LAG:] >= 22) & (price_data['hour'][MAX_LAG:] <= 23)), exit_signal=(price_data['day_of_week'][MAX_LAG:] == 4))\n",
     "  except:\n",
     "    buy_idxs, buy_exit_idxs = [], []\n",
     "  try:\n",
-    "    sell_idxs, sell_exit_idxs = trading_signals_sell(sell_signal=(np.min(numba_indicators_nan.negative_volume_indicator(volume=price_data['btc_volume'])) == 526), exit_signal=(numba_indicators_nan.min_max_adx(numba_indicators_nan.adx(high=price_data['aapl_high'], low=price_data['ng_low'], close=price_data['dog_close'], window=7284), window=5709)[0] != price_data['pltr_open']))\n",
+    "    sell_idxs, sell_exit_idxs = trading_signals_sell(sell_signal=((signals.moving_std(arr=price_data['btc_close'], window=30)[MAX_LAG:] > np.quantile(signals.moving_std(arr=price_data['btc_close'], window=30)[MAX_LAG:], 0.75)) & (price_data['hour'][MAX_LAG:] >= 21) & (price_data['hour'][MAX_LAG:] <= 23)), exit_signal=(price_data['day_of_week'][MAX_LAG:] == 4))\n",
     "  except:\n",
     "    sell_idxs, sell_exit_idxs = [], []\n",
     "  try:\n",
@@ -35694,7 +35552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35704,16 +35562,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "999"
+       "-10.153010891586487"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
