--- a/test.ipynb
+++ b/test.ipynb
@@ -22338,7 +22338,7 @@
     "from fitness.custom_logger.load_logger import create_file_logger\n",
     "\n",
     "# set the path to the training data, used to get strategies, below\n",
-    "data_path = Path(r'C:/\\Users/\\vchar/\\OneDrive/\\Desktop/\\ML Projects/\\Upwork/\\AlgoT_ML_Dev/\\GrammarEvolution/\\PonyGE2/\\data_60min.csv')\n",
+    "data_path = Path(r'C:/\\Users/\\vchar/\\OneDrive/\\Desktop/\\ML Projects/\\Upwork/\\AlgoT_ML_Dev/\\GrammarEvolution/\\PonyGE2/\\data_30min.csv')\n",
     "\n",
     "# set the path to the csv file containing the strategies generated\n",
     "strategy_file_path = Path(r\"C:/\\Users/\\vchar/\\Downloads/\\ge_results.csv\")\n",
@@ -22359,14 +22359,15 @@
     "logger = create_file_logger(filename=f'{file_name}')\n",
     "\n",
     "# set the time frequency in minutes\n",
-    "time_freq = 60\n",
+    "time_freq = 30\n",
     "\n",
     "# calculate the number of bars per 5 weeks\n",
-    "n_bars = int(7 * 24 * 60 * 5 / time_freq)\n",
+    "# n_bars = int(7 * 24 * 60 * 5 / time_freq)\n",
     "# n_bars = int(7 * 24 * 60 * 40 / time_freq)\n",
+    "n_bars = int(7 * 24 * 60 * 10 / time_freq)\n",
     "\n",
     "# set the number of available folds\n",
-    "n_total_folds = 9\n",
+    "n_total_folds = 5\n",
     "\n",
     "# n_fold should be equal to the number of fold which has been used to derive the strategies\n",
     "# if there are no folds, just set it to 0\n",
@@ -22375,7 +22376,7 @@
     "# start_fold should be set to the number of fold starting from which the folds of data are not used during strategy generation\n",
     "# end_fold is the last fold not used for strategy generation\n",
     "start_fold = 1\n",
-    "end_fold = 9\n",
+    "end_fold = 5\n",
     "\n",
     "# setting winning probability threshold \n",
     "prob_threshold = 0.9\n",
